5-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: demo1
          servicePort: 80
      - path: /v1
        backend:
          serviceName: demo1
          servicePort: 80
      - path: /v2
        backend:
          serviceName: demo2
          servicePort: 80
  - host: v2.com
    http:
      paths:
      - backend:
          serviceName: demo2
          servicePort: 80
  - host: v1.com
    http:
      paths:
      - backend:
          serviceName: demo1
          servicePort: 80
